# tweety

./: README.md  requirements.txt  setup.cfg  setup.py
docs/: installation.rst  twDataTypes.rst
src/tweety/: bot.py  builder.py  exceptions_.py  http.py
src/tweety/types/: __init__.py  search.py  twDataTypes.py  usertweet.py
tests/: test_get_replies.py  test_get_tweets.py  test_get_user.py  test_protected_user.py
