[metadata]
name = tweety
version = 0.6.0
author = Alp Deniz
author_email = alpdeniz@protonmail.com
description = A fork of easy Twitter Scraper Tweety
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alpdeniz/tweety
project_urls =
    Bug Tracker = https://github.com/alpdeniz/tweety/issues
    Documentation = https://github.com/alpdeniz/tweety
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src